fix bug where layout collapses when products list is empty

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,11 @@ hr {
 
 /* Grid System */
 
+.tableContainer {
+    display: table;
+    width: 100%;
+}
+
 .row {
     display: table-row;
 }
@@ -90,12 +95,18 @@ hr {
     padding: 15px;
 }
 
+#productList:empty {
+    background-image: url('../images/loading.gif');
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .product {
     float: left;
     border-radius: 3px;
     width: calc(100%/3);
     padding: 15px 15px 0 15px;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 .productImageContainer {
